--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,42 +11,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the code
-    - name: Checkout repository
-      uses: actions/checkout@v3
-	  
-	  - name: Install Chrome
+      # Step 1: Checkout the code
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Step 2: Install Chrome
+      - name: Install Chrome
         uses: browser-actions/setup-chrome@v1
 
+      # Step 3: Install ChromeDriver
       - name: Install ChromeDriver
         uses: nanasess/setup-chromedriver@v2
 
+      # Step 4: Install dependencies
       - name: Install dependencies
         run: sudo apt-get install -y libnss3 libgbm1 libxss1 libasound2
 
-    # Step 2: Set up Java
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      # Step 5: Set up Java
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    # Step 3: Cache Maven dependencies (optional, speeds up build)
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+      # Step 6: Cache Maven dependencies (optional)
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-    # Step 4: Build and run TestNG tests
-    - name: Build and run tests
-      run: mvn clean test
+      # Step 7: Build and run TestNG tests
+      - name: Build and run tests
+        run: mvn clean test
 
-    # Step 5: Upload TestNG reports (optional)
-    - name: Upload TestNG report
-      uses: actions/upload-artifact@v4
-      with:
-        name: TestNG-Reports
-        path: target/surefire-reports/
+      # Step 8: Upload TestNG reports (optional)
+      - name: Upload TestNG report
+        uses: actions/upload-artifact@v4
+        with:
+          name: TestNG-Reports
+          path: target/surefire-reports/
