--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Step 4: Install dependencies
       - name: Install dependencies
-        run: sudo apt-get install -y libnss3 libgbm1 libxss1 libasound2
+        run: sudo apt-get install -y libnss3 libgbm1 libxss1 libasound2t64
 
       # Step 5: Set up Java
       - name: Set up JDK 17
@@ -33,23 +33,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-
-      # Step 6: Cache Maven dependencies (optional)
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
+      
       # Step 7: Build and run TestNG tests
       - name: Build and run tests
         run: mvn clean test
-
-      # Step 8: Upload TestNG reports (optional)
-      - name: Upload TestNG report
-        uses: actions/upload-artifact@v4
-        with:
-          name: TestNG-Reports
-          path: target/surefire-reports/
